// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loads and display CCollapse component renders correctly 1`] = `
"<transition-stub appear="false" persisted="false" css="false">
  <div class="collapse">Default slot</div>
</transition-stub>"
`;

exports[`Loads and display CCollapse component renders correctly 2`] = `
"<transition-stub appear="false" persisted="false" css="false">
  <div class="collapse show">Default slot</div>
</transition-stub>"
`;
